--- a/src/main/resources/settings/general/keybinds.fxml
+++ b/src/main/resources/settings/general/keybinds.fxml
@@ -4,57 +4,56 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.tricht.lunaris.settings.general.KeybindsGUI">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.tricht.lunaris.settings.general.KeybindsGUI">
     <children>
-        <VBox spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-              AnchorPane.topAnchor="0.0">
+        <VBox spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <AnchorPane styleClass="pane_title">
                     <children>
-                        <Label text="Keybinds" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Label text="Keybinds" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <padding>
-                                <Insets bottom="3.0"/>
+                                <Insets bottom="3.0" />
                             </padding>
                         </Label>
                     </children>
                 </AnchorPane>
                 <GridPane hgap="10.0" vgap="8.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="450.0"/>
+                        <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="10.0" />
+                        <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Label text="Pricecheck" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                        <TextField fx:id="priceCheckKeybindInput" maxWidth="120.0" GridPane.columnIndex="1"
-                                   GridPane.rowIndex="0" GridPane.vgrow="NEVER"/>
-                        <Label text="Search on /trade" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-                        <TextField fx:id="searchTradeKeybindInput" maxWidth="120.0" GridPane.columnIndex="1"
-                                   GridPane.rowIndex="1" GridPane.vgrow="NEVER"/>
-                        <Label text="Item info" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-                        <TextField fx:id="itemInfoKeybindInput" maxWidth="120.0" GridPane.columnIndex="1"
-                                   GridPane.rowIndex="2" GridPane.vgrow="NEVER"/>
-                        <Label text="/hideout" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-                        <TextField fx:id="hideoutKeybindInput" maxWidth="120.0" GridPane.columnIndex="1"
-                                   GridPane.rowIndex="3" GridPane.vgrow="NEVER"/>
-                        <Label text="Open on wiki" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-                        <TextField fx:id="wikiKeybindInput" maxWidth="120.0" GridPane.columnIndex="1"
-                                   GridPane.rowIndex="4" GridPane.vgrow="NEVER"/>
+                        <Label text="Pricecheck" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                        <TextField fx:id="priceCheckKeybindInput" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.vgrow="NEVER" />
+                        <Label text="Search on /trade" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                        <TextField fx:id="searchTradeKeybindInput" maxWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.vgrow="NEVER" />
+                        <Label text="Item info" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <TextField fx:id="itemInfoKeybindInput" maxWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.vgrow="NEVER" />
+                        <Label text="/hideout" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                        <TextField fx:id="hideoutKeybindInput" maxWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.vgrow="NEVER" />
+                        <Label text="Open on wiki" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                        <TextField fx:id="wikiKeybindInput" maxWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.vgrow="NEVER" />
+                        <Button fx:id="setPriceCheckKey" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" />
+                        <Button fx:id="setTradeSearchKey" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <Button fx:id="setItemInfoKey" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <Button fx:id="setHideoutKey" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                        <Button fx:id="setWikiKey" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                     </children>
                 </GridPane>
             </children>
         </VBox>
     </children>
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 </AnchorPane>
