--- a/src/main/resources/settings/general/keybinds.fxml
+++ b/src/main/resources/settings/general/keybinds.fxml
@@ -32,6 +32,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
                         <Label text="Pricecheck" GridPane.columnIndex="0" GridPane.rowIndex="0" />
@@ -55,6 +56,7 @@
                         <Button fx:id="setWikiKey" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                         <Button fx:id="setKickKey" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                         <Button fx:id="setInviteLastWhisperKeybindInput" mnemonicParsing="false" onAction="#setKey" text="Set key" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                        <CheckBox fx:id="toggleStashScroll" mnemonicParsing="false" onAction="#toggleCheckbox" text="Enable Ctrl+Scroll stash scroll" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" />
                     </children>
                 </GridPane>
             </children>
