Add version to about page.

--- a/src/main/resources/settings/about.fxml
+++ b/src/main/resources/settings/about.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="dev.tricht.lunaris.settings.AboutGUI">
     <children>
         <VBox spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -28,7 +29,8 @@
                     </rowConstraints>
                     <children>
                         <Label text="Lunaris by mtricht and pvaass" />
-                  <Label text="https://github.com/mtricht/lunaris" GridPane.rowIndex="1" />
+                        <Label text="https://github.com/mtricht/lunaris" GridPane.rowIndex="1" />
+                        <Label fx:id="version" text="" GridPane.rowIndex="2" />
                     </children>
                 </GridPane>
             </children>
